Add Jinja Parser

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,3 +1,4 @@
 [GLOBAL]
-#Set jinjaTemplateDirectory to absolute path
-jinjaTemplateDirectory = /mnt/c/Users/Andrew.Evans/avarim/exampleProject
+#Set to absolute path
+jinjaTemplateDirectory = /mnt/c/Users/Andrew.Evans/Documents/cloud_poc
+yamlFilesDir = /mnt/c/Users/Andrew.Evans/Documents/cloud_poc
