Add YAML Parser

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,5 @@
 [GLOBAL]
 #Set to absolute path
 jinjaTemplateDirectory = /mnt/c/Users/Andrew.Evans/Documents/cloud_poc
-yamlFilesDir = /mnt/c/Users/Andrew.Evans/Documents/cloud_poc
+yamlFilesDir = /mnt/c/Users/Andrew.Evans/platform-config/ansible/environments/tst
+ignoreFile = /mnt/c/Users/Andrew.Evans/platform-config/ansible/environments/tst/inventory
